# wheelbarrow

./: README.org
cryptopals/set1/ex1/: Makefile  main.c
filltmpl/: README.org
filltmpl/c/: Makefile  filltmpl.c
filltmpl/js/: filltmpl.js
filltmpl/python/: filltmpl.py
infixconv/: main.c
lilgames/2/: Makefile  game.h  main.c
lispinho/: main.py
lispinho/js/: README.org  arith.lsp  loop.lsp  main.js  main2.js
nesjs/: nes.js
nesjs/ui/: package-lock.json
polyrhythm/: index.html
prefix2postfix/c/: Makefile  main.c
rustgst/addwatermark/: Cargo.toml
rustgst/addwatermark/src/: main.rs
vm-crash-course/: .gitignore
vm-crash-course/ch1/ex1/: machine1.py
vm-crash-course/ch1/ex2/: Makefile  a2  machine2.c  program.m2
vm-crash-course/ch1/ex3/: 0.in  1.in  2.in  Makefile  a3  machine3.c
vm-crash-course/ch1/ex4/: 1.in  Makefile  a4  machine4.c
vm-crash-course/ch1/ex5/: 0.in  1.in  2.in  Makefile  a5  machine5.c
vm/c/: Makefile  bits.c  bits.h  main.c  vm.c  vm.h
